Commit 7 files to main
Commit 7 files to main

--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -8667,15 +8667,14 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 文章摘要：你，真的爱过吗？
 
-![图片](https://mmbiz.qpic.cn/mmbiz_gif/5JvNTno8yAbeTuSzRz4oGKjR70OBgXJaKAwVA2G2DKYbd2icQwWHibrAA5fjP7Xpr6gKZSMBJbCu2VU9hLCcJbHg/640?wx_fmt=gif#imgIndex=0)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/1.png)
 
-![图片](https://mmbiz.qpic.cn/sz_mmbiz_png/5JvNTno8yAYl05NMdE5fUlBXLKuhOFxkarPSbdZgP08jrXic9G20Oyuht4tr8db8PLVqyia6Vgnchibvgsr5lPBBA/640?wx_fmt=png&from=appmsg#imgIndex=1)
-
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/2.png)
 
 
 **编者按：**从和般若蘭老师相遇开始，几乎每次见面都会问老师有关爱的话题。老师是真爱的化身，她爱天地万物，爱每一个人，她说，真正的爱没有任何占有的需要，是当心进入深度寂静时如花儿绽放般的喜悦状态。你，真的爱过吗？
 
-**![图片](https://mmbiz.qpic.cn/sz_mmbiz_png/5JvNTno8yAYl05NMdE5fUlBXLKuhOFxkSicOZtVzhTmlt65yQcT9kkvcapCDThicwxyCtgutVbebvOwX9EoFu0ow/640?wx_fmt=png&from=appmsg&tp=png&wxfrom=5&wx_lazy=1#imgIndex=2)**
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/3.png)
 
 
 
@@ -8705,7 +8704,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![图片](https://mmbiz.qpic.cn/sz_mmbiz_png/5JvNTno8yAYl05NMdE5fUlBXLKuhOFxkF9J4ozW0G6zxoCAmsYYACLuNt8LOFOHn7miaWMAjiaoQROuib8JwPUHqQ/640?wx_fmt=png&from=appmsg&tp=png&wxfrom=5&wx_lazy=1#imgIndex=3)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/4.png)
 
 在世上无论何种教育中，爱的学习都是一门必修课。
 
@@ -8735,7 +8734,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![图片](https://mmbiz.qpic.cn/sz_mmbiz_png/5JvNTno8yAYl05NMdE5fUlBXLKuhOFxk5yenL0Rm0RfBbmbYgQo50Z9zPevES39j4esPCIsZoywdWlicVkaPr5A/640?wx_fmt=png&from=appmsg&tp=png&wxfrom=5&wx_lazy=1#imgIndex=4)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/5.png)
 
 曾经，我很爱的一个爱人，彻底的离开了我。
 
@@ -8761,7 +8760,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![般若蘭](https://gitee.com/junhaoyu/work20221111/raw/master/img/20250901215856.png)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/般若蘭.png)
 
 
 
