Commit 13 files to main
Commit 13 files to main

--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -8661,20 +8661,22 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-336、过情关
+336、- [过情关] https://mp.weixin.qq.com/s/RLlNpZ1ZgJggUV-x9wKZ6g
+
+过情关
 
 原创 般若蘭 公众号 心能缘 2025年09月01日 20:58 天津
 
 文章摘要：你，真的爱过吗？
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/1.png)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/1.jpg)
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/2.png)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/2.jpg)
 
 
 **编者按：**从和般若蘭老师相遇开始，几乎每次见面都会问老师有关爱的话题。老师是真爱的化身，她爱天地万物，爱每一个人，她说，真正的爱没有任何占有的需要，是当心进入深度寂静时如花儿绽放般的喜悦状态。你，真的爱过吗？
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/3.png)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/3.jpg)
 
 
 
@@ -8704,7 +8706,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/4.png)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/4.jpg)
 
 在世上无论何种教育中，爱的学习都是一门必修课。
 
@@ -8734,7 +8736,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/5.png)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/5.jpg)
 
 曾经，我很爱的一个爱人，彻底的离开了我。
 
@@ -8760,7 +8762,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/般若蘭.png)
+![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/般若蘭.jpg)
 
 
 
@@ -8778,7 +8780,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 logging  
 
-202509012200 创作者YJH 完成终极版
+202509012213 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
