Commit 7 files to main
Commit 7 files to main

--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -8671,9 +8671,9 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 图片文字 心能缘 联结心灵能量的内在关系
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/1.jpg)
+![](/post/2024-09-08-talk-about-love/1.jpg)
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/2.jpg)
+![](/post/2024-09-08-talk-about-love/2.jpg)
 
 
 **编者按：**从和般若蘭老师相遇开始，几乎每次见面都会问老师有关爱的话题。老师是真爱的化身，她爱天地万物，爱每一个人，她说，真正的爱没有任何占有的需要，是当心进入深度寂静时如花儿绽放般的喜悦状态。你，真的爱过吗？
@@ -8684,7 +8684,8 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/3.jpg)
+![](/post/2024-09-08-talk-about-love/3.jpg)
+
 
 
 
@@ -8717,7 +8718,8 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/4.jpg)
+![](/post/2024-09-08-talk-about-love/4.jpg)
+
 
 在世上无论何种教育中，爱的学习都是一门必修课。
 
@@ -8747,7 +8749,8 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/5.jpg)
+![](/post/2024-09-08-talk-about-love/5.jpg)
+
 
 曾经，我很爱的一个爱人，彻底的离开了我。
 
