--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -9220,6 +9220,135 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 
 
+- [宇宙究竟有多大？看完后我彻悟了！上（转载）-春风秋雨（李志文）-财新网] https://jevons.blog.caixin.com/archives/200707
+
+【宇宙中的我】
+本文不是虚构的可能性还是有的。在这里提醒我的读者发表意见，评论本文的真伪。
+
+![](/images/blue dot.jpg)
+
+这是一张非常著名的照片：
+
+1990年，旅行者1号
+
+在距离地球60亿公里的地方
+
+拍了一张地球的照片
+
+——也就是上图中那个亮点
+
+1996年
+
+天体物理学家、著名科学作家卡尔·萨根
+
+就此说过一段非常著名的话：
+
+在这个小点上
+
+每个你爱的人
+
+每个你认识的人
+
+每个你曾经听过的人
+
+以及每个曾经存在的人
+
+都在那里过完一生。
+
+这里集合了一切的欢喜与苦难
+
+数千个自信的宗教
+
+意识形态以及经济学说
+
+每个英雄和懦夫
+
+每个创造者与毁灭者
+
+每对相恋中的年轻爱侣
+
+每个充满希望的孩子
+
+每对父母
+
+发明家和探险家
+
+每个教授道德的老师
+
+每个贪污政客
+
+每个超级巨星
+
+每个至高无上的领袖
+
+每个人类历史上的圣人与罪人
+
+都住在这里 ——
+
+**一粒悬浮在阳光下的微尘**
+
+花花世界，芸芸众生
+
+现在、过去、未来
+
+无非都是这一粒尘埃
+
+佛曰：
+
+众生迷闷，背觉合尘
+
+故发尘劳，有世间相
+
+于是，我抬头仰望星空：
+
+想象那些厮杀的士兵
+
+想象那些拼搏的大众
+
+想象那些富豪明星
+
+想象那些帝王将相
+
+地球上的一切荣耀
+
+最终都大不过这一粒微尘
+
+都亮不过这暗淡的一点
+
+再想象我们自己：
+
+时而装模作样
+
+时而自以为是
+
+时而傲慢清高
+
+何苦呢？
+
+你终其一生挣得的一切荣耀
+
+都不及这暗淡一点的亿万分之一！
+
+更何况这世界
+
+也只是这漆黑宇宙里一个小小的孤单微粒
+
+我们是如此的渺小、微乎其微
+
+我们根本无法拯救自己
+
+我们更无法改变世界
+
+还有什么爱恨，能让我们为之牵肠挂肚？
+
+还有什么成就，能让我们忍受万般痛楚？
+
+还有什么期待，能让我们总是犹豫不决？
+
+顿时，我彻悟了！
+
+
+
 终
 
 
@@ -9234,7 +9363,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 logging  
 
-202510021051 创作者YJH 完成终极版
+202510031446 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
