--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -9225,7 +9225,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 【宇宙中的我】
 本文不是虚构的可能性还是有的。在这里提醒我的读者发表意见，评论本文的真伪。
 
-![](/post/2024-09-08-谈谈失恋这件小事（终极版）_files/blue dot.jpg)
+![](/images/6.jpg)
 
 这是一张非常著名的照片：
 
