--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -9388,7 +9388,7 @@ https://pearlsmw-blog.com/2021/05/24/180/
 
 352、心晴指引 视频号 创伤与抑郁识别理解与_20251011162235
 
-![](/images/7.jpg)
+![](/images/7.jpeg)
 
 两位医生解答
 
