--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -9703,6 +9703,14 @@ Chapter3 自我•成长
 
 
 
+363、#《学会幸福》第六章 
+
+如果亲密关系中的双方认同的核心价值观相同或十分契近，你们一同往这个方向走，那么你们之间无须胶着也不容易分开。因为你们联结的是心，不必用其他方式捆绑彼此，心意自然也是相通的。 当你不觉得非跟谁在一起不可，便能安于自然的安排。春夏是自然，秋冬也是自然；白昼是自然，黑夜也是自然；人聚了散了是自然，爱了不爱了也是自然。当你明白这些，那就真心诚意地偕行一段。至于一段究竟该多长？—你的情爱可以沫，全身这没有保存期限，就顺其自然。 如果你认同自己从《庄子》学到的核心价值，就会知道变心也是自然。这个时代，要是调查在实质上与精神上从来都没有出轨的夫妻比例有多少，数字可能少得出乎意料。 庄子还讲过，人们会把一艘船藏到山谷里，把一座山藏在大泽里，自以为很稳当。但自然造化的力量却像出人意料的大力士，在人们不注意的夜里，轻易地就把船、把山搬移走，愚味的人不知道，还以为自己藏得很好呢。既然藏得再好，还是有丢失的时候，还不如就不要藏了，把你想要的就藏在天下之中吧！没打算带回家私藏、没打算据为己有的就永远不会失去。怀抱天地之间最宏阔的情感，致力于永恒心神灵魂的提升长养，而不恋着、不想强行抓住流转过眼的人事物。 所以，如果你能在“心灵”这个生命中最重要、影响也最自巨大的地方下功夫，你的生命就是圆满的，有缘遇到一个跟你有相同价值追求、因为同心所以能永结的对象，感情自然能细水长流。如果发现对方渐行渐远，散了，那也是缘分，你仍旧是原来的完整生命。
+
+- [学会幸福 (豆瓣)] https://book.douban.com/subject/34795544/
+
+
+
 终
 
 
@@ -9717,7 +9725,7 @@ Chapter3 自我•成长
 
 logging  
 
-202510242100 创作者YJH 完成终极版
+202510250719 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
