--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10088,7 +10088,16 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 
 
+375、有一天我也会轻轻的放下
+欲成其大，首须志远，不为琐事所羁，不为蝇利所惑，不为暗局所迷，不较锱铢得失，不计当下成败，眼有大视野，胸怀大气魄；次须心高，不纠于情，不缠于人，能隐于市，可静于喧，控欲壑泛滥，防陋习滋生，神平气自和，心宁境自升；再须能舍，树高去繁枝，人立弃小我，放下什么，得到什么。
+
+
+
 终
+
+
+
+命里有时终须有，命里无时莫强求。
 
 
 
