--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10093,6 +10093,87 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 
 
+376、人生不能太过圆满
+
+求而不得未必是遗憾
+
+歌曲《自渡》陈粒
+
+
+
+377、错过了心爱的姑娘
+
+若男孩笑了哭了累了
+
+说要去流浪
+
+留下大人的模样
+
+看岁月剑拔弩张
+
+总会有个人成为你的远方
+
+歌曲《牧马城市》毛不易
+
+
+
+378、等到记忆只剩精华
+
+等到笑容不掺伪装
+
+我们相约老地方
+
+等到释怀所有悲伤
+
+等到体谅世事无常
+
+我们相约老地方
+
+歌曲《如约而至》许嵩
+
+
+
+379、生活和电视剧最大的区别就在于电视剧用10分钟就可以化解矛盾冰释前嫌度过难关，而生活可能需要赤裸裸地煎熬着10年甚至20年才能让心不那么疼。生活比电视剧残忍多了，也真实多了。——心理师满莉
+
+
+
+380、放下的前提是，真正的拿起过。
+
+
+
+381、青春不再见，有一天再见。
+
+
+
+382、活在爱里。
+
+
+
+383、转自微博 蕊希Erin
+听说我书里的这句话最近在网上很火。
+
+世界欠我一个你，
+是世界欠的，不是你。
+
+你们最喜欢我书里的哪句话？
+#总要习惯一个人# 
+
+- [总要习惯一个人 (豆瓣)] https://book.douban.com/subject/30269676/
+
+
+
+384、飞向宇宙，有理论认为，我们身体里的每一个原子，都来自于一颗爆炸了的恒星。当你看到无穷远的时候，你就会发现眼前的烦恼，就约等于0。如果我们每个人都是那些爆炸了的星星组成的，能遇见就很幸运了。足够幸运，幸运到只剩下感激，时时心存喜乐。青春往往是从喜欢一个人开始的，喜欢，她（电影中是他）的喜欢，其实有很多次，都想向全世界坦荡荡地宣告，我的青春，早在她（电影中是他）认识我之前，就开始了。漫游银河的飞船去了哪里，我不在意，宇宙的终极答案就是，我与世界，只差一个你。这就是我青春里的所有故事，它可能己经结束了，但也可能，才刚刚开始。与其想念，不如相见。念念不相忘。 后面转自微博 蕊希Erin 听说我书里的这句话最近在抖音很火。 世界欠我一个你， 是世界欠的，不是你。 #总要习惯一个人 总要期待两个人——*电影 [念念相忘 (豆瓣)] https://movie.douban.com/subject/35424911/
+
+
+
+385、Let this be my last word, that I trust in thy love.
+
+“我相信你的爱，”让这句话做我的最后的话。
+
+——泰戈尔《飞鸟集》
+
+
+
 终
 
 
@@ -10111,7 +10192,7 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 logging  
 
-202510280742 创作者YJH 完成终极版
+202510282242 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
