--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10166,7 +10166,63 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 
 
-385、Let this be my last word, that I trust in thy love.
+385、02 相爱的人要望向外在的同一方向
+
+我记得第二次欧丽娟老师提到《风沙星辰》（即《人的大地》），是在《红楼梦》爱情观这一课里。她说“圣修伯里曾经说过，生命交给我们爱，并非只存在于相互的凝视，而是两个人一起望向外在的同一方向。”
+
+关于这句话，她有更详尽的叙述：
+
+“我想当我们超越了对一见钟情的强度和速度的追求之后，我们回到生命的本质，我们认知到日久生情在深度、长度、厚度上面的珍贵。
+
+对我们现代人而言，我们应该更要呼吁，我们要让自己的人格提升，同时也要让我们的爱情超越它的自私性，而能够达到一个更宽广的高度和广度。
+
+《红楼梦》的世界在他的时代限制下，让宝黛爱的那么辛苦，可是作者已经给它很多很多超越那个时代所能认知到的爱情的深度。
+
+但是我会希望，我们已经脱离那个时代的限制，我们可以有更高的要求。
+
+我很喜欢用一个并生的树向上生长的比喻，两个相爱的人你们要望向外在的同一个方向，不要只陷在你我的互相凝视当中，看到死都还只是渺小的两个人。如果你们望向外在同一个方向，你们就可以拥有整个世界，拥有整个宇宙。”
+
+03 让黑暗发出回声
+
+相信每一位看过《红楼梦》的读者都会感叹曹雪芹对于人性观察之细微和挖掘之透彻。我也知道，对于人性的洞察或者聚焦于自我的探索是每个人都正在实践的课题。
+
+对此欧丽娟老师也有非常精彩的表述：
+
+“自我探索真的是一个永无止境的功课，只要你能做到自我探索，你甚至就可以把握到真理。
+
+几年前的得到诺贝尔文学奖的爱尔兰诗人希尼，他有一段被访问的话语，真的让我意识到说我们为什么要文学创作，我们为什么要做文学的研究。
+
+他得了奖之后有记者访谈，问他说那你为什么要写诗。希尼说我写诗是为了认识自己，让黑暗发出回声。
+
+那什么叫黑暗？
+
+黑暗是指你看不到的、你认识不到的、包含在你的潜意识、包含隐藏在这个世界表象里面深不可测的那些奥秘，而那些奥秘就在你认识自己的时候，它会告诉你一种非常透彻的声音。那个声音就会给你智慧，给你对这个世界非常亲民的关照。
+
+一个人的自我真的就像一部宇宙的大书，深不可测。你认识自己，你就可以使黑暗发出回声。”
+
+- [当我看完了200小时+欧丽娟老师的课程] https://mp.weixin.qq.com/s/fIfY4R-7Sa4b47e0HQr9Vw
+
+
+
+386、总有一天，我要在别的世界的晨光里对你唱道：我以前在地球的光里，在人的爱里，已经见过你了。——泰戈尔
+
+我听见爱情，我相信爱情。爱情是一潭挣扎的蓝藻，如同一阵凄伟的风，穿过我失血的经脉，驻守岁月的信念。——泰戈尔《生如夏花》。
+
+
+
+387、生命犹如渡过一重大海 
+我们相遇在同一条窄船里 
+死时我们同登彼岸 
+又向不同的世界各奔前程 
+一旦命运要你繁华 
+便美得漫漫扬威 
+一旦命运要你荒凉 
+便荒得满地皆灰
+——泰戈尔
+
+
+
+388、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -10192,7 +10248,7 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 logging  
 
-202510282242 创作者YJH 完成终极版
+202510292100 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
