--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10222,7 +10222,33 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 
 
-388、Let this be my last word, that I trust in thy love.
+388、生命“禅” (吴云艳著) 
+
+[生命“禅” (豆瓣)] https://book.douban.com/subject/21337924/
+
+净心，静身，走入境界生活
+
+生命其实何其简单？
+
+无解的时候就放下，不必纠结。
+
+孩子的智慧，就是当即放下，想哭就哭，想笑就笑。
+
+而成人懂得放下的时候，已经沧海桑田。
+
+能放下的，露出生命坦然的微笑。
+
+放不下的，也得放下，在生命不得不放弃的时候。
+
+生命在说什么——零极限健康静心，净心，静身，感恩，快乐，爱……
+
+
+
+情感伤害 ——年轻时我们不懂静心
+
+
+
+389、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -10248,7 +10274,7 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 logging  
 
-202510292100 创作者YJH 完成终极版
+202510292227 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
