--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10248,7 +10248,29 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 
 
-389、Let this be my last word, that I trust in thy love.
+389、还有一种我们常见到的是那些「曾经沧海难为水，除却巫山不是云」，或者「我再也不能爱了」，这样的时候，我们认为过去的、失去的情感是最好的，总是会把对现在遇到的人去和回忆中带着光环的那个人去比较，这种比较是不公平的，也是不必要的。这让我们自己无法开始新的生活。抱着旧的的回忆坚守在原地，很多时候，你越是觉得过去不可代替，你越会在记忆中一遍一遍的美化那些日子。
+
+所以，我们看看，也不能仅仅沉溺于过去的美好回忆中。
+
+[知乎盐选 | 时间人格（下）] https://www.zhihu.com/market/albums/1092448482597650432/manuscript/1093470527284461568
+
+
+
+#活出属于「自我」的时间 
+
+[知乎盐选 | 从此，身心自由]
+
+https://www.zhihu.com/market/albums/1092448482597650432/manuscript/1093477002857881600
+
+时间管理 高效的生命管理术课程 孙研 活出属于自我的时间 知乎知识会员
+
+[知乎盐选 | 【发刊词】时间禅：85%的烦恼都源于不合理的时间观！]
+
+https://www.zhihu.com/market/album/1092448482597650432/section/1092449007997140992
+
+
+
+390、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -10274,7 +10296,7 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 logging  
 
-202510292227 创作者YJH 完成终极版
+202511061242 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
