--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10252,6 +10252,14 @@ https://music.163.com/song?id=1302360342&uct2=U2FsdGVkX1+o7sws7rjD5Cn0b8QHnJdYu7
 
 所以，我们看看，也不能仅仅沉溺于过去的美好回忆中。
 
+……
+
+而时间禅认为，我们要全情投入地觉察事物，和物做深层的交流，感受它们的生命，从中获得审美体验和智慧启迪，这实际是我们和外部世界联结的过程。这样的过程破除了宿命主义带来的割裂，使我们和周遭的人事物相互联系，和谐共处。并且，能够帮助我们在与外物的联结中，感受到更丰富、宽广的生命。
+
+哲人说：“给我宁静吧，让我接受不能改变的，给我勇气吧，让我去改变我能改变的，给我智慧吧，让我分辨出什么是我能改变的，什么是我不能改变的。”
+
+总而言之，我们要和过去握手言和，把握现在，对未来有所希冀。这样，我们的生命是连贯而和谐的，我们才能以平和、宁静的心思去观察周围的一切，感受它们的生命，也从它们的生命中看到自己。
+
 [知乎盐选 | 时间人格（下）] https://www.zhihu.com/market/albums/1092448482597650432/manuscript/1093470527284461568
 
 
