--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10368,7 +10368,11 @@ https://mp.weixin.qq.com/s/XvL83Zb68aE8Ve3OCOAtDw
 
 
 
-391、Let this be my last word, that I trust in thy love.
+391、不怕错爱，就是看你能不能在这个过程中里面让自己更坚定，让自己更清晰，让自己不抱怨这个世界，能够更加的积极地有勇气去面向未来的生活，所以我们说错爱对人来说很有意义，因为错爱这个问题在我们当代社会里是每一个人都会遇到的，几乎每个人都会遇到，在错爱中，我们会成长，打开自我，会有自己的收获，会相信有自己的力量，而没有错爱你是不会体会的。
+
+
+
+392、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
