--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10372,7 +10372,23 @@ https://mp.weixin.qq.com/s/XvL83Zb68aE8Ve3OCOAtDw
 
 
 
-392、Let this be my last word, that I trust in thy love.
+392、“Love is merely a madness”。
+
+此句出自莎士比亚的《皆大欢喜》，译为：“爱情是一种疯。”或“爱情是一种疯狂。”
+
+提及莎士比亚，我第一时间想到的是《罗密欧与朱丽叶》以及里面非常经典的一句话：“不要指着月亮起誓，它是变化无常的，每个月都有盈亏圆缺；你要指着它起誓，也许你的爱情也会像它一样无常。”
+
+我的爱情启蒙之书就是《罗密欧与朱丽叶》，它是我的爱情观的引导者，它告诉我爱情的色彩和基调。
+
+
+
+393、爱没有对错、真假、是非。它是人对自身的探索、实践和验证。她不持原则，无需评判。它最终是一种洞悉，一种原谅。
+
+安妮宝贝 《春宴》
+
+
+
+394、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -10398,7 +10414,7 @@ https://mp.weixin.qq.com/s/XvL83Zb68aE8Ve3OCOAtDw
 
 logging  
 
-202511092018 创作者YJH 完成终极版
+202511130808 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
