--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -10392,6 +10392,68 @@ https://mp.weixin.qq.com/s/XvL83Zb68aE8Ve3OCOAtDw
 
 
 
+395、诗歌《心声》--【奥】里尔克
+
+心声
+
+【奥】里尔克
+
+遮住我的双眼
+
+我依然能看见你
+
+捂住我的双耳
+
+我依然能听见你
+
+没有了双脚
+
+我依然能走向你
+
+没有了嘴巴
+
+我依然能呼唤你
+
+折断我的手臂
+
+我依然能用我的心代替双手拥抱你的影子
+
+摘去我的心脏
+
+我的大脑依然在跳动
+
+即使我的大脑被烧毁
+
+我依然能用全身的血液托浮起你
+
+\-----------------
+
+**Aspirations**
+
+**Rilke**
+
+Put out my eyes, and I can see you still
+
+Slam my ears to , and I can hear you yet ,
+
+And without any feet can go to you ；
+
+And tongueless ,I can conjure you at will
+
+Breke off my arms ,I shall take hold of you
+
+And grasp you with my heart as with a hand ;
+
+Arrest my heart ,my brain will beat as true;
+
+And if you set this brain of mine afire
+
+Then on my bolld -stream I yet will carry you.
+
+\-----------
+
+
+
 395、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
@@ -10418,7 +10480,7 @@ https://mp.weixin.qq.com/s/XvL83Zb68aE8Ve3OCOAtDw
 
 logging  
 
-202511131113 创作者YJH 完成终极版
+202511161033 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
